syntax = "proto3";

package api.review.v1;

import "google/api/annotations.proto";

option go_package = "review-service/api/review/v1;v1";
option java_multiple_files = true;
option java_package = "api.review.v1";

service Review {
	rpc CreateReview (CreateReviewRequest) returns (CreateReviewReply) {
		option (google.api.http) = {
			post: "/v1/review"
			body: "*"
		};
	}
	rpc UpdateReview (UpdateReviewRequest) returns (UpdateReviewReply);
	rpc DeleteReview (DeleteReviewRequest) returns (DeleteReviewReply);
	rpc GetReview (GetReviewRequest) returns (GetReviewReply);
	rpc ListReview (ListReviewRequest) returns (ListReviewReply);
}

// 创建评价请求
message CreateReviewRequest {
    int64 userId = 1;
    int64 orderId = 2;
    int64 score = 3;
    int64 serviceScore = 4;
    int64 expressScore = 5;
    int64 content = 6;
    string picInfo = 7;
    string videoInfo = 8;
    string anonymous = 9;
}

// 创建评价回复
message CreateReviewReply {
	int64 id = 1;
}

message UpdateReviewRequest {}
message UpdateReviewReply {}

message DeleteReviewRequest {}
message DeleteReviewReply {}

message GetReviewRequest {}
message GetReviewReply {}

message ListReviewRequest {}
message ListReviewReply {}